# redifind

./: LICENSE  README.md  main.py  pyproject.toml
src/redifind/: cli.py  config.py  indexer.py  preflight.py  query.py  redis_client.py  snippets.py  tokenizer.py  utils.py  watch.py
tests/: test_cli_json.py  test_index_stats.py  test_indexer_binary.py  test_query.py  test_query_edges.py  test_query_explain.py  test_snippets.py  test_tokenizer.py  test_utils.py  test_utils_filters.py
